[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["shunak <shuna966@gmail.com>"]
description = "A test project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/shunak/hello-wasm"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

